# speech-to-text

./: README.md  audio_handler.py  hf.py  hfv2.py  main.py  openai_whisper.py  plotter.py  postprocessing.py  pyproject.toml  text_handler.py
models/: openai_whisper.py  openai_whisper_v3.py
